user app commit

--- a/demoproject/movies/templates/movies/index.html
+++ b/demoproject/movies/templates/movies/index.html
@@ -1,10 +1,13 @@
+{% extends "movies/base_generic.html" %}
+{% block content %}
 <h1>Newest Movies<h1>
-  {% if newest_movies %}
-    <ul>
-    {% for movie in newest_movies %}
-     <li><a href="{% url 'movies:show' movie.id %}">{{ movie.title }}</a></li>
-    {% endfor %}
-    </ul>
-  {% else %}
-    <p>There are no movies recorded.</p>
+{% if newest_movies %}
+  <ul>
+  {% for movie in newest_movies %}
+   <li><a href="{% url 'movies:show' movie.id %}">{{ movie.title }}</a></li>
+  {% endfor %}
+  </ul>
+{% else %}
+  <p>There are no movies recorded.</p>
 {% endif %}
+{% endblock content %}
