--- a/demoproject/movies/templates/movies/show.html
+++ b/demoproject/movies/templates/movies/show.html
@@ -1,21 +1,24 @@
+{% extends "movies/base_generic.html" %}
+{% block content %}
 <h2>{{movie.title}} Details</h2>
-  <table>
-      <thead>
-      </thead>
-      <tbody>
-          <tr>
-              <td><b>Director:</b></td>
-              <td>{{movie.director}}</td>
+<table>
+  <thead>
+  </thead>
+  <tbody>
+      <tr>
+          <td><b>Director:</b></td>
+          <td>{{movie.director}}</td>
 </tr> <tr>
-              <td><b>Release date:</b></td>
-              <td>{{movie.release_date}}</td>
-          </tr>
-          <tr>
-              <td><b>Genre:</b></td>
-              <td>{{movie.genre}}</td>
+          <td><b>Release date:</b></td>
+          <td>{{movie.release_date}}</td>
+      </tr>
+      <tr>
+          <td><b>Genre:</b></td>
+          <td>{{movie.genre}}</td>
 </tr> <tr>
-              <td><b>Duration (min):</b></td>
-              <td>{{movie.duration}}</td>
-          </tr>
-    </tbody>
+          <td><b>Duration (min):</b></td>
+          <td>{{movie.duration}}</td>
+      </tr>
+</tbody>
 </table>
+{% endblock content %}
